--- a/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-application/pom.xml
+++ b/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-application/pom.xml
@@ -28,7 +28,7 @@
   <artifactId>sample-app</artifactId>
   <packaging>jar</packaging>
 
-  <name>Apache Spring Cloud Config Sample Application</name>
+  <name>Apache Log4j Spring Cloud Config Sample Application</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
