--- a/pom.xml
+++ b/pom.xml
@@ -453,7 +453,7 @@
       <dependency>
         <groupId>org.fusesource.jansi</groupId>
         <artifactId>jansi</artifactId>
-        <version>1.18</version>
+        <version>2.2.0</version>
         <optional>true</optional>
       </dependency>
       <dependency>
@@ -719,7 +719,7 @@
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
-        <version>3.18.1</version>
+        <version>3.19.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -846,7 +846,7 @@
       <dependency>
         <groupId>net.javacrumbs.json-unit</groupId>
         <artifactId>json-unit</artifactId>
-        <version>2.22.0</version>
+        <version>2.23.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -883,6 +883,7 @@
         <groupId>com.github.tomakehurst</groupId>
         <artifactId>wiremock</artifactId>
         <scope>test</scope>
+        <!--  2.27.2 causes WatchHttpTest to fail. -->
         <version>2.26.3</version>
       </dependency>
       <!-- Used for compressing to formats other than zip and gz -->
