--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -95,11 +95,11 @@
       <artifactId>jackson-dataformat-xml</artifactId>
       <optional>true</optional>
     </dependency>
-    <!-- POM for jackson-dataformat-xml 2.9.2 depends on woodstox-core 5.0.3 -->
+    <!-- POM for jackson-dataformat-xml depends on woodstox-core -->
     <dependency>
       <groupId>com.fasterxml.woodstox</groupId>
       <artifactId>woodstox-core</artifactId>
-      <version>5.0.3</version>
+      <version>${woodstox.version}</version>
       <optional>true</optional>
     </dependency>
     <!-- Required for console color support in Windows -->
