LOG4J2-2973 Minor tweaks to previous work.

--- a/log4j-layout-template-json/src/test/resources/additionalFieldEnrichedJsonTemplateLayoutLogging.properties
+++ b/log4j-layout-template-json/src/test/resources/additionalFieldEnrichedJsonTemplateLayoutLogging.properties
@@ -17,24 +17,21 @@ appender.list.name = List
 appender.list.type = List
 appender.list.raw = true
 appender.list.layout.type = JsonTemplateLayout
-appender.list.layout.charset = UTF-8
-appender.list.layout.extra[0].key = stringField
-appender.list.layout.extra[0].value = string
-appender.list.layout.extra[0].type = EventTemplateAdditionalField
-appender.list.layout.extra[0].format = STRING
-appender.list.layout.extra[1].key = numberField
-appender.list.layout.extra[1].value = 1
-appender.list.layout.extra[1].format = JSON
-appender.list.layout.extra[1].type = EventTemplateAdditionalField
-appender.list.layout.extra[2].key = objectField
-appender.list.layout.extra[2].value = {"numberField":1}
-appender.list.layout.extra[2].format = JSON
-appender.list.layout.extra[2].type = EventTemplateAdditionalField
-appender.list.layout.extra[3].key = listField
-appender.list.layout.extra[3].value = [1, "two"]
-appender.list.layout.extra[3].format = JSON
-appender.list.layout.extra[3].type = EventTemplateAdditionalField
+appender.list.layout.eventTemplateAdditionalField[0].type = EventTemplateAdditionalField
+appender.list.layout.eventTemplateAdditionalField[0].key = stringField
+appender.list.layout.eventTemplateAdditionalField[0].value = string
+appender.list.layout.eventTemplateAdditionalField[1].type = EventTemplateAdditionalField
+appender.list.layout.eventTemplateAdditionalField[1].key = numberField
+appender.list.layout.eventTemplateAdditionalField[1].value = 1
+appender.list.layout.eventTemplateAdditionalField[1].format = JSON
+appender.list.layout.eventTemplateAdditionalField[2].type = EventTemplateAdditionalField
+appender.list.layout.eventTemplateAdditionalField[2].key = objectField
+appender.list.layout.eventTemplateAdditionalField[2].value = {"numberField":1}
+appender.list.layout.eventTemplateAdditionalField[2].format = JSON
+appender.list.layout.eventTemplateAdditionalField[3].type = EventTemplateAdditionalField
+appender.list.layout.eventTemplateAdditionalField[3].key = listField
+appender.list.layout.eventTemplateAdditionalField[3].value = [1, "two"]
+appender.list.layout.eventTemplateAdditionalField[3].format = JSON
 
 rootLogger.level = info
 rootLogger.appenderRef.stdout.ref = List
-
