--- a/log4j-layout-template-json/pom.xml
+++ b/log4j-layout-template-json/pom.xml
@@ -61,12 +61,15 @@
     </dependency>
 
     <dependency>
-      <groupId>org.junit.vintage</groupId>
-      <artifactId>junit-vintage-engine</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -177,9 +180,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <!-- Disabling the default execution and only using it to provide
-               the shared settings between individual executions. -->
-          <skip>true</skip>
           <!-- Enforcing a non-UTF-8 encoding to check that the layout
                indeed handles everything in UTF-8 without implicitly
                relying on the system defaults. -->
@@ -190,89 +190,6 @@
             <junit.jupiter.execution.parallel.mode.default>concurrent</junit.jupiter.execution.parallel.mode.default>
           </systemPropertyVariables>
         </configuration>
-        <executions>
-          <execution>
-            <id>default</id>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <skip>${skipTests}</skip>
-              <excludes>
-                <exclude>**/JsonTemplateLayoutConcurrentEncodeTest.java</exclude>
-                <exclude>**/JsonTemplateLayoutTest.java</exclude>
-              </excludes>
-            </configuration>
-          </execution>
-          <!-- Dummy recycler execution -->
-          <execution>
-            <id>recycler-dummy</id>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <skip>${skipTests}</skip>
-              <systemPropertyVariables>
-                <log4j2.layout.jsonTemplate.recyclerFactory>dummy</log4j2.layout.jsonTemplate.recyclerFactory>
-              </systemPropertyVariables>
-              <includes>
-                <include>**/JsonTemplateLayoutConcurrentEncodeTest.java</include>
-                <include>**/JsonTemplateLayoutTest.java</include>
-              </includes>
-            </configuration>
-          </execution>
-          <!-- Thread-Local recycler execution -->
-          <execution>
-            <id>recycler-tl</id>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <skip>${skipTests}</skip>
-              <systemPropertyVariables>
-                <log4j2.layout.jsonTemplate.recyclerFactory>threadLocal</log4j2.layout.jsonTemplate.recyclerFactory>
-              </systemPropertyVariables>
-              <includes>
-                <include>**/JsonTemplateLayoutConcurrentEncodeTest.java</include>
-                <include>**/JsonTemplateLayoutTest.java</include>
-              </includes>
-            </configuration>
-          </execution>
-          <!-- ArrayBlockingQueue recycler execution -->
-          <execution>
-            <id>recycler-abq</id>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <skip>${skipTests}</skip>
-              <systemPropertyVariables>
-                <log4j2.layout.jsonTemplate.recyclerFactory>queue:supplier=java.util.concurrent.ArrayBlockingQueue.new</log4j2.layout.jsonTemplate.recyclerFactory>
-              </systemPropertyVariables>
-              <includes>
-                <include>**/JsonTemplateLayoutConcurrentEncodeTest.java</include>
-                <include>**/JsonTemplateLayoutTest.java</include>
-              </includes>
-            </configuration>
-          </execution>
-          <!-- MpmcArrayQueue recycler execution -->
-          <execution>
-            <id>recycler-mpmc</id>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <skip>${skipTests}</skip>
-              <systemPropertyVariables>
-                <log4j2.layout.jsonTemplate.recyclerFactory>queue:supplier=org.jctools.queues.MpmcArrayQueue.new</log4j2.layout.jsonTemplate.recyclerFactory>
-              </systemPropertyVariables>
-              <includes>
-                <include>**/JsonTemplateLayoutConcurrentEncodeTest.java</include>
-                <include>**/JsonTemplateLayoutTest.java</include>
-              </includes>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
 
       <!-- Disable ITs, which are Docker-dependent, by default. -->
