--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <artifactId>log4j</artifactId>
   <packaging>pom</packaging>
   <name>Apache Log4j 2</name>
-  <version>2.14.1</version>
+  <version>2.15.0-SNAPSHOT</version>
   <parent>
     <groupId>org.apache.logging</groupId>
     <artifactId>logging-parent</artifactId>
@@ -174,7 +174,7 @@
     <connection>scm:git:https://gitbox.apache.org/repos/asf/logging-log4j2.git</connection>
     <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/logging-log4j2.git</developerConnection>
     <url>https://gitbox.apache.org/repos/asf?p=logging-log4j2.git</url>
-    <tag>log4j-2.14.1-rc1</tag>
+    <tag>log4j-${Log4jReleaseVersion}</tag>
   </scm>
   <properties>
     <!-- make sure to update these for each release! -->
