--- a/pom.xml
+++ b/pom.xml
@@ -843,7 +843,8 @@
       <dependency>
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase-core</artifactId>
-        <version>3.5.3</version>
+        <!-- 3.6.0 to 4.3.2 break binary compatibility. -->
+        <version>3.5.5</version>
       </dependency>
       <dependency>
         <groupId>net.javacrumbs.json-unit</groupId>
