--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,13 +31,6 @@ jobs:
           java-package: jdk
           architecture: x64
 
-      - name: Setup JDK 8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 8
-          java-package: jdk
-          architecture: x64
-
       - name: Inspect environment (Linux)
         if: runner.os == 'Linux'
         run: env | grep '^JAVA'
@@ -45,7 +38,7 @@ jobs:
       - name: Build with Maven (Linux)
         if: runner.os == 'Linux'
         continue-on-error: true
-        run: ./mvnw -V -B --no-transfer-progress -e -DtrimStackTrace=false -Dmaven.test.failure.ignore=true -Dsurefire.rerunFailingTestsCount=1 --global-toolchains .github/workflows/maven-toolchains.xml verify
+        run: ./mvnw -V -B --no-transfer-progress -e -DtrimStackTrace=false -Dmaven.test.failure.ignore=true -Dsurefire.rerunFailingTestsCount=1  verify
 
       - name: Inspect environment (Windows)
         if: runner.os == 'Windows'
@@ -54,7 +47,7 @@ jobs:
       - name: Build with Maven (Windows)
         if: runner.os == 'Windows'
         continue-on-error: true
-        run: ./mvnw -V -B --no-transfer-progress -e "-DtrimStackTrace=false" "-Dmaven.test.failure.ignore=true" "-Dsurefire.rerunFailingTestsCount=1" "-Dlog4j2.junit.fileCleanerSleepPeriodMillis=1000" --global-toolchains ".github\workflows\maven-toolchains.xml" verify
+        run: ./mvnw -V -B --no-transfer-progress -e "-DtrimStackTrace=false" "-Dmaven.test.failure.ignore=true" "-Dsurefire.rerunFailingTestsCount=1" "-Dlog4j2.junit.fileCleanerSleepPeriodMillis=1000" verify
 
       - name: Inspect environment (MacOS)
         if: runner.os == 'macOS'
@@ -63,7 +56,7 @@ jobs:
       - name: Build with Maven (MacOS)
         if: runner.os == 'macOS'
         continue-on-error: true
-        run: ./mvnw -V -B --no-transfer-progress -e -DtrimStackTrace=false -Dmaven.test.failure.ignore=true -Dsurefire.rerunFailingTestsCount=1 --global-toolchains .github/workflows/maven-toolchains.xml verify
+        run: ./mvnw -V -B --no-transfer-progress -e -DtrimStackTrace=false -Dmaven.test.failure.ignore=true -Dsurefire.rerunFailingTestsCount=1 verify
 
       - name: Publish Test Results
         uses: scacap/action-surefire-report@v1
