Upgrade Maven Bundle Plugin version

--- a/log4j-osgi/pom.xml
+++ b/log4j-osgi/pom.xml
@@ -81,7 +81,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <!-- Skipping tests as I don't know why they are failing -->
-          <skip>true</skip>
+          <skip>false</skip>
         </configuration>
       </plugin>
       <plugin>
