--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,7 @@ jobs:
         run: set java
 
       - name: Build with Maven (Windows)
+        timeout-minutes: 60
         if: runner.os == 'Windows'
         continue-on-error: true
         run: ./mvnw -V -B --no-transfer-progress -e "-DtrimStackTrace=false" "-Dmaven.test.failure.ignore=true" "-Dsurefire.rerunFailingTestsCount=1" "-Dlog4j2.junit.fileCleanerSleepPeriodMillis=1000" verify
@@ -54,6 +55,7 @@ jobs:
         run: env | grep '^JAVA'
 
       - name: Build with Maven (MacOS)
+        timeout-minutes: 60
         if: runner.os == 'macOS'
         continue-on-error: true
         run: ./mvnw -V -B --no-transfer-progress -e -DtrimStackTrace=false -Dmaven.test.failure.ignore=true -Dsurefire.rerunFailingTestsCount=1 verify
