--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,9 +16,19 @@
 #
 version: 2
 updates:
-- package-ecosystem: maven
-  directory: "/"
-  schedule:
-    interval: daily
-    time: '04:00'
-  open-pull-requests-limit: 10
+  - package-ecosystem: maven
+    directory: "/"
+    schedule:
+      interval: daily
+      time: '04:00'
+    open-pull-requests-limit: 10
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: weekly
+
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: weekly
