--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Setup JDK 11
         uses: actions/setup-java@v2.1.0
         with:
+          distribution: 'adopt'
           java-version: 11
           java-package: jdk
           architecture: x64
