--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -330,6 +330,7 @@
                   <includes>
                     <include>module-info.class</include>
                     <include>**/Log4jPlugins.class</include>
+                    <include>**/Log4jBeanInfo.class</include>
                   </includes>
                 </fileset>
                 <fileset>
