--- a/pom.xml
+++ b/pom.xml
@@ -1027,6 +1027,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
           <version>${checkstyle.plugin.version}</version>
+          <configuration>
+            <excludes>**/module-info.java</excludes>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
