--- a/log4j-perf/pom.xml
+++ b/log4j-perf/pom.xml
@@ -114,6 +114,16 @@
       <version>1.2.17</version>
     </dependency>
     <dependency>
+      <groupId>com.epam.deltix</groupId>
+      <artifactId>gflog-api</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.epam.deltix</groupId>
+      <artifactId>gflog-core</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>com.lmax</groupId>
       <artifactId>disruptor</artifactId>
     </dependency>
