Try current Surefire/Failsafe to workaround random-ish test failures where Surefire says it cannot find/stop a JVM, 2.22.1 -> 3.0.0-M5.

--- a/pom.xml
+++ b/pom.xml
@@ -208,8 +208,8 @@
     <!-- surefire.plugin.version 2.18 yields http://jira.codehaus.org/browse/SUREFIRE-1121, which is fixed in 2.18.1 -->
     <!-- surefire.plugin.version 2.19 yields https://issues.apache.org/jira/browse/SUREFIRE-1193. -->
     <!-- all versions after 2.13 yield https://issues.apache.org/jira/browse/SUREFIRE-720 -->
-    <surefire.plugin.version>2.22.2</surefire.plugin.version>
-    <failsafe.plugin.version>2.22.2</failsafe.plugin.version>
+    <surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
+    <failsafe.plugin.version>3.0.0-M5</failsafe.plugin.version>
     <checkstyle.plugin.version>3.0.0</checkstyle.plugin.version>
     <deploy.plugin.version>2.8.2</deploy.plugin.version>
     <rat.plugin.version>0.12</rat.plugin.version>
